--- a/templates/login.html
+++ b/templates/login.html
@@ -1,12 +1,16 @@
-{% extends 'base.html' %} {% block content %}
-<section class="auth">
-  <h2>Login</h2>
-  <form method="POST" action="/login">
-    <label>Email</label>
-    <input name="email" type="email" required />
-    <label>Password</label>
-    <input name="password" type="password" required />
+{% extends "layout.html" %} {% block content %}
+<div class="auth-container">
+  <form method="POST">
+    <h2>Login</h2>
+    {% if error %}
+    <p class="error">{{ error }}</p>
+    {% endif %}
+    <input type="text" name="username" placeholder="Username" required />
+    <input type="password" name="password" placeholder="Password" required />
     <button type="submit">Login</button>
+    <p>
+      Don't have an account? <a href="{{ url_for('register') }}">Register</a>
+    </p>
   </form>
-</section>
+</div>
 {% endblock %}
