made changes fixed bugs

--- a/static/css/dashboard.css
+++ b/static/css/dashboard.css
@@ -60,3 +60,11 @@ h1 {
     font-size:1em;
     color:#aaa;
 }
+.rover-img {
+  width: 100%;
+  max-height: 300px;
+  object-fit: cover;
+  border-radius: 12px;
+  margin-top: 10px;
+  box-shadow: 0 0 20px rgba(255, 255, 255, 0.2);
+}
