--- a/templates/register.html
+++ b/templates/register.html
@@ -12,4 +12,5 @@
     <p>Already have an account? <a href="{{ url_for('login') }}">Login</a></p>
   </form>
 </div>
+<script src="{{ url_for('static', filename='js/loader.js') }}"></script>
 {% endblock %}
